# airplane-coordinates

./: .eslintrc.js  README.md  manifest.json  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js
backend/: Cargo.toml  pom.xml  readme.md  test.sh  test_fast.sh  test_moderate.sh  test_slow.sh
backend/src/: lib.rs
backend/src/api/: airplane_point.rs  cartesian_point_api.rs  cartesian_point_from_airplane.rs  mod.rs  plane_api.rs  plane_point_api.rs  planes.rs  points_close_to.rs  points_close_to_each_other.rs  rotate.rs  scalonate.rs  serializable_cartesian_point.rs  translate.rs
backend/src/core/: mod.rs
backend/src/core/cartesian_plane/: cartesian_point.rs  distance.rs  mod.rs  scalonate.rs  translate.rs
backend/src/core/math/: mod.rs
backend/src/core/plane/: mod.rs  plane.rs  plane_point.rs
backend/src/core/plane/cartesian/: cartesian_point.rs  distance.rs  mod.rs
backend/src/core/plane/conversions/: cartesian_to_polar.rs  mod.rs  polar_to_cartesian.rs
backend/src/core/plane/polar/: polar_point.rs  rotate.rs
backend/src/core/plane_conversions/: cartesian_to_polar.rs  mod.rs  polar_to_cartesian.rs
backend/src/core/polar_plane/: mod.rs  polar_point.rs  rotate.rs
backend/src/core/precise_decimal/: custom_operations.rs  mod.rs  standard_operations.rs
backend/src/core/trigonometry/: consts.rs  deg_to_rad.rs  mod.rs  normalize_angle.rs  rad_to_deg.rs  simplify_angle.rs
backend/src/features/: mod.rs  rotate.rs  scalonate.rs  translate.rs
backend/src/main/java/com/AirplaneCoordinates/: AirplaneCoordinatesApplication.java
src/: App.tsx  (+1 more)
(+749 files in other folders)
