[package]
name = "backend"
version = "0.1.0"
authors = ["João Arthur"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
serde = { version = "1.0.145", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rust_decimal = { version = "1.26", features = ["maths"] }
rust_decimal_macros = "1.26"